latest touches on doc

--- a/Readme.html
+++ b/Readme.html
@@ -1101,7 +1101,12 @@ body .markdown-body
 <li>clone this repo</li>
 <li>Code Dir Tree
     <div class="codehilite"><pre>./
-    MainService/    &lt;Your main  code dir&gt; 
+    MainService/    &lt;Your main  code dir&gt;
+        main/
+            ak_number_utils.py   (The main Util code)
+        api/
+        api/
+        test/ 
     Readme.md
     docker-entrypoint.sh
     ..
